--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
+    <!-- ======= About Section =======    -->
     <section id="about" class="about">
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
+          <h2>About Us</h2>
         </div>
 
         <div class="row">
